# pharmaco-chemistry-biblio

./: .gitignore  .pylintrc  README.md  UML_ParcMachine.html  URL_MCD_UML.txt  analysis.ipynb  bar_chart_all.ipynb  biblio_analysis (1).ipynb  biblio_analysis.ipynb  cleaner.ipynb  df_to_vega.ipynb  filtre.py  index.css  index.html  index.js  interactive.ipynb  metrics.py  old_rendu_boker.ipynb  rendu.ipynb  requirements.txt  sankey.ipynb  vbar_data.json  z_all_slider.ipynb  z_analysis copy.ipynb  z_bar_chart_all.ipynb  z_mark_cicle.ipynb  z_sankey_vega.ipynb  z_sankey_veha.ipynb  z_sankey_veha.json
analysis/: analysis.ipynb  interactive.ipynb
backups/: biblio_analysis.ipynb  sanity_checks.py  z_altair_test_chart.ipynb  z_old_chart.ipynb
catk/: MANIFEST.in  README.md  demos.py  demos2.py  models.ipynb  setup.cfg
catk/catk/: __init__.py  ca.py  config.py  tools.py
catk/catk/data/: __init__.py  colours.csv  data.py  smokers.csv  wisconsin.csv
demos/: README.md  ca.py  demo_ca.py  demo_generators.py  demo_prince.py  stat504_chap3_independence.py
input/: README.md  computer_science_humanities.csv  pharmaco_chemistry.csv  pharmaco_chemistry_2.csv  pharmaco_chemistry_2_samples.csv  pharmaco_chemistry_samples.csv
json_chart/: all_chart.json  hit_map.json  mark.json  sankey.json  sankey_copy.json  sankey_data.json  sankey_template.json  test copy.json  vbar.json
results/: README.md  activities_2022-01-29_16-33-05.csv  analysis.html  computer_science_humanities_2022-03-17_08-12-10.csv  computer_science_humanities_cross_2022-05-19_17-07-31.csv  (+14 more)
scopus/: NOTES.md  (+8 more)
(+25 files in other folders)
