[metadata]
name = catk
version = 0.0.2
author = Romuald THION
author_email = romuald.thion@unc.nc
description = A small package for correspondence analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/unc-informatique/pharmaco-chemistry-biblio
project_urls =
    Bug Tracker = https://github.com/unc-informatique/pharmaco-chemistry-biblio/issues
classifiers =
    Programming Language :: Python :: 3
    License :: WTFPL
    Operating System :: OS Independent

[options]
python_requires = >=3.8
packages =
    catk
install_requires =
    numpy
    pandas
    scipy
    seaborn

